--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "react": "^16.13.1",
+    "react-cool-dimensions": "^1.1.3",
     "react-dom": "^16.13.1",
     "react-piano": "^3.1.3",
     "react-scripts": "3.4.1",
