--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: node_js
 node_js:
   - "12"
-cache: yarn
+cache: npm
 
 install:
-  - yarn install
-  - yarn global add firebase-tools
+  - npm install
+  - npm install -g firebase-tools
 
 script:
-  - CI=false yarn run build
+  - CI=false npm run build
 
 after_success:
   - firebase deploy --token $FIREBASE_TOKEN
