--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@types/node": "^12.12.51",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "classnames": "^2.2.6",
+    "just-range": "^2.1.0",
+    "lodash.difference": "^4.5.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-cool-dimensions": "^1.1.3",
     "react-dom": "^16.13.1",
