--- a/package.json
+++ b/package.json
@@ -13,16 +13,29 @@
     "@types/node": "^12.12.51",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/yup": "^0.29.3",
     "classnames": "^2.2.6",
+    "firebase": "^7.17.1",
+    "formik": "^2.1.5",
     "just-range": "^2.1.0",
     "lodash.difference": "^4.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-cool-dimensions": "^1.1.3",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "react-redux-firebase": "^3.7.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-firestore": "^0.13.0",
+    "redux-thunk": "^2.3.0",
     "soundfont-player": "^0.12.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "yup": "^0.29.2"
   },
   "scripts": {
     "start": "react-scripts start",
