--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.51",
+    "@types/preval.macro": "^3.0.0",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
@@ -21,6 +22,7 @@
     "formik": "^2.1.5",
     "just-range": "^2.1.0",
     "lodash.difference": "^4.5.0",
+    "preval.macro": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-cool-dimensions": "^1.1.3",
