--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/yup": "^0.29.3",
     "classnames": "^2.2.6",
     "firebase": "^7.17.1",
+    "firebase-admin": "^9.0.0",
+    "firebase-functions": "^3.9.0",
     "formik": "^2.1.5",
     "just-range": "^2.1.0",
     "lodash.difference": "^4.5.0",
